// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swaps should render correctly when empty 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "flexGrow": 1,
    }
  }
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
  style={
    {
      "flexGrow": 1,
    }
  }
>
  <View>
    <View
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 8,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`Swaps should render failed swaps 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "flexGrow": 1,
    }
  }
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
  style={
    {
      "flexGrow": 1,
    }
  }
>
  <View>
    <View
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 8,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "gap": 4,
            "opacity": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#FFFCFA",
              "borderColor": "#099DE2",
              "borderRadius": 12,
              "borderWidth": 1,
              "opacity": 1,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              }
            }
          >
            <View
              style={
                {
                  "flexShrink": 1,
                  "gap": 4,
                }
              }
            >
              <View
                style={
                  {
                    "height": 17,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 28,
                          },
                          undefined,
                        ],
                        {
                          "marginBottom": -40,
                          "marginTop": -40,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  swap failed
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 6,
                  }
                }
              >
                <test-file-stub
                  fill="#DF321F"
                  style={
                    [
                      {
                        "height": 16,
                        "width": 16,
                      },
                      undefined,
                    ]
                  }
                />
                <View
                  style={
                    {
                      "height": 17,
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#2B1911",
                          "fontFamily": "Baloo2-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 24,
                        },
                        [
                          [
                            {
                              "color": "#7D675E",
                              "fontFamily": "Baloo2-Regular",
                              "fontSize": 14,
                              "letterSpacing": 0.14,
                              "lineHeight": 20,
                            },
                            undefined,
                          ],
                          {
                            "marginBottom": -40,
                            "marginTop": -40,
                          },
                        ],
                        false,
                      ]
                    }
                    suppressHighlighting={true}
                  >
                    swap out
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "flex-end",
                    "height": 40,
                    "paddingBottom": 1,
                    "paddingTop": 4,
                    "width": 141,
                  },
                  {
                    "gap": 6,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    undefined,
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    },
                    {
                      "height": 10,
                      "width": 130,
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "flexShrink": 0,
                      },
                      {
                        "paddingBottom": 2,
                        "paddingLeft": 2,
                        "paddingRight": 2,
                        "paddingTop": 2,
                      },
                    ]
                  }
                >
                  <test-file-stub
                    fill="#888"
                    style={
                      [
                        {
                          "height": 12,
                          "width": 12,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexBasis": "0%",
                        "flexDirection": "row",
                        "flexGrow": 1,
                        "flexShrink": 1,
                      },
                      {
                        "gap": 2,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexBasis": "0%",
                        "flexDirection": "row",
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "justifyContent": "flex-end",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            {
                              "opacity": 0.1,
                              "textAlign": "right",
                            },
                            [
                              {
                                "fontFamily": "Baloo2-SemiBold",
                                "fontSize": 14,
                                "letterSpacing": 0.14,
                                "lineHeight": 22,
                                "marginBottom": -10,
                                "marginTop": -10,
                              },
                              false,
                            ],
                          ],
                          false,
                        ]
                      }
                    >
                      0.00 0
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            {
                              "textAlign": "right",
                            },
                            [
                              {
                                "fontFamily": "Baloo2-SemiBold",
                                "fontSize": 14,
                                "letterSpacing": 0.14,
                                "lineHeight": 22,
                                "marginBottom": -10,
                                "marginTop": -10,
                              },
                              false,
                            ],
                          ],
                          false,
                        ]
                      }
                    >
                      30 178
                    </Text>
                  </View>
                  <Text
                    allowFontScaling={false}
                    style={
                      [
                        {
                          "color": "#2B1911",
                          "fontFamily": "Baloo2-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 24,
                        },
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 14,
                            "letterSpacing": 0.14,
                            "lineHeight": 22,
                            "marginBottom": -10,
                            "marginTop": -10,
                          },
                          false,
                        ],
                        false,
                      ]
                    }
                  >
                    sats
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Swaps should render pending swaps 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "flexGrow": 1,
    }
  }
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
  style={
    {
      "flexGrow": 1,
    }
  }
>
  <View>
    <View
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 8,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "gap": 4,
            "opacity": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#FFFCFA",
              "borderColor": "#099DE2",
              "borderRadius": 12,
              "borderWidth": 1,
              "opacity": 1,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              }
            }
          >
            <View
              style={
                {
                  "flexShrink": 1,
                  "gap": 4,
                }
              }
            >
              <View
                style={
                  {
                    "height": 17,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 28,
                          },
                          undefined,
                        ],
                        {
                          "marginBottom": -40,
                          "marginTop": -40,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  pending swap
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 6,
                  }
                }
              >
                <LottieAnimationView
                  autoPlay={true}
                  cacheComposition={true}
                  colorFilters={
                    [
                      {
                        "color": 4294272290,
                        "keypath": "main",
                      },
                    ]
                  }
                  enableMergePathsAndroidForKitKatAndAbove={false}
                  loop={true}
                  onAnimationFinish={[Function]}
                  progress={0}
                  resizeMode="contain"
                  sourceJson="{"v":"5.1.15","fr":60,"ip":0,"op":141,"w":120,"h":120,"nm":"Composição 1","ddd":0,"assets":[],"layers":[{"ddd":0,"ind":0,"ty":4,"nm":"main","sr":1,"ks":{"o":{"a":0,"k":100,"ix":11},"r":{"a":1,"k":[{"i":{"x":[0.833],"y":[0.833]},"o":{"x":[0.167],"y":[0.167]},"n":["0p833_0p833_0p167_0p167"],"t":0,"s":[0],"e":[1080]},{"t":180}],"ix":10},"p":{"a":0,"k":[60,60,0],"ix":2},"a":{"a":0,"k":[-14.604,-15.104,0],"ix":1},"s":{"a":0,"k":[100,100,100],"ix":6}},"ao":0,"shapes":[{"ty":"gr","it":[{"d":1,"ty":"el","s":{"a":0,"k":[106.793,106.793],"ix":2},"p":{"a":0,"k":[0,0],"ix":3},"nm":"Caminho da elipse 1","mn":"ADBE Vector Shape - Ellipse","hd":false},{"ty":"st","c":{"a":0,"k":[1,1,1,1],"ix":3},"o":{"a":0,"k":100,"ix":4},"w":{"a":0,"k":11,"ix":5},"lc":2,"lj":1,"ml":4,"nm":"Traçado 1","mn":"ADBE Vector Graphic - Stroke","hd":false},{"ty":"tr","p":{"a":0,"k":[-14.604,-15.104],"ix":2},"a":{"a":0,"k":[0,0],"ix":1},"s":{"a":0,"k":[100,100],"ix":3},"r":{"a":0,"k":0,"ix":6},"o":{"a":0,"k":100,"ix":7},"sk":{"a":0,"k":0,"ix":4},"sa":{"a":0,"k":0,"ix":5},"nm":"Transformar"}],"nm":"Elipse 1","np":3,"cix":2,"ix":1,"mn":"ADBE Vector Group","hd":false},{"ty":"tm","s":{"a":1,"k":[{"i":{"x":[0.833],"y":[0.833]},"o":{"x":[0.167],"y":[0.167]},"n":["0p833_0p833_0p167_0p167"],"t":0,"s":[0],"e":[0]},{"i":{"x":[0.833],"y":[0.833]},"o":{"x":[0.167],"y":[0.167]},"n":["0p833_0p833_0p167_0p167"],"t":60,"s":[0],"e":[67]},{"t":119}],"ix":1},"e":{"a":1,"k":[{"i":{"x":[0.833],"y":[0.833]},"o":{"x":[0.167],"y":[0.167]},"n":["0p833_0p833_0p167_0p167"],"t":0,"s":[3],"e":[70]},{"i":{"x":[0.833],"y":[0.833]},"o":{"x":[0.167],"y":[0.167]},"n":["0p833_0p833_0p167_0p167"],"t":60,"s":[70],"e":[70]},{"t":119}],"ix":2},"o":{"a":0,"k":0,"ix":3},"m":1,"ix":2,"nm":"Aparar caminhos 1","mn":"ADBE Vector Filter - Trim","hd":false}],"ip":0,"op":900,"st":0,"bm":0}],"chars":[],"markers":[]}"
                  speed={1}
                  style={
                    [
                      {
                        "height": 80,
                        "width": 80,
                      },
                      {
                        "height": 16,
                        "width": 16,
                      },
                    ]
                  }
                  textFiltersAndroid={[]}
                  textFiltersIOS={[]}
                  useNativeLooping={false}
                />
                <View
                  style={
                    {
                      "height": 17,
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#2B1911",
                          "fontFamily": "Baloo2-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 24,
                        },
                        [
                          [
                            {
                              "color": "#7D675E",
                              "fontFamily": "Baloo2-Regular",
                              "fontSize": 14,
                              "letterSpacing": 0.14,
                              "lineHeight": 20,
                            },
                            undefined,
                          ],
                          {
                            "marginBottom": -40,
                            "marginTop": -40,
                          },
                        ],
                        false,
                      ]
                    }
                    suppressHighlighting={true}
                  >
                    swap out
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "flex-end",
                    "height": 40,
                    "paddingBottom": 1,
                    "paddingTop": 4,
                    "width": 141,
                  },
                  {
                    "gap": 6,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    undefined,
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    },
                    {
                      "height": 10,
                      "width": 130,
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "flexShrink": 0,
                      },
                      {
                        "paddingBottom": 2,
                        "paddingLeft": 2,
                        "paddingRight": 2,
                        "paddingTop": 2,
                      },
                    ]
                  }
                >
                  <test-file-stub
                    fill="#888"
                    style={
                      [
                        {
                          "height": 12,
                          "width": 12,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexBasis": "0%",
                        "flexDirection": "row",
                        "flexGrow": 1,
                        "flexShrink": 1,
                      },
                      {
                        "gap": 2,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexBasis": "0%",
                        "flexDirection": "row",
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "justifyContent": "flex-end",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            {
                              "opacity": 0.1,
                              "textAlign": "right",
                            },
                            [
                              {
                                "fontFamily": "Baloo2-SemiBold",
                                "fontSize": 14,
                                "letterSpacing": 0.14,
                                "lineHeight": 22,
                                "marginBottom": -10,
                                "marginTop": -10,
                              },
                              false,
                            ],
                          ],
                          false,
                        ]
                      }
                    >
                      0.00 0
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            {
                              "textAlign": "right",
                            },
                            [
                              {
                                "fontFamily": "Baloo2-SemiBold",
                                "fontSize": 14,
                                "letterSpacing": 0.14,
                                "lineHeight": 22,
                                "marginBottom": -10,
                                "marginTop": -10,
                              },
                              false,
                            ],
                          ],
                          false,
                        ]
                      }
                    >
                      30 178
                    </Text>
                  </View>
                  <Text
                    allowFontScaling={false}
                    style={
                      [
                        {
                          "color": "#2B1911",
                          "fontFamily": "Baloo2-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 24,
                        },
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 14,
                            "letterSpacing": 0.14,
                            "lineHeight": 22,
                            "marginBottom": -10,
                            "marginTop": -10,
                          },
                          false,
                        ],
                        false,
                      ]
                    }
                  >
                    sats
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "gap": 4,
            "opacity": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#FFFCFA",
              "borderColor": "#099DE2",
              "borderRadius": 12,
              "borderWidth": 1,
              "opacity": 1,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              }
            }
          >
            <View
              style={
                {
                  "flexShrink": 1,
                  "gap": 4,
                }
              }
            >
              <View
                style={
                  {
                    "height": 17,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 28,
                          },
                          undefined,
                        ],
                        {
                          "marginBottom": -40,
                          "marginTop": -40,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  pending swap
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 6,
                  }
                }
              >
                <LottieAnimationView
                  autoPlay={true}
                  cacheComposition={true}
                  colorFilters={
                    [
                      {
                        "color": 4294272290,
                        "keypath": "main",
                      },
                    ]
                  }
                  enableMergePathsAndroidForKitKatAndAbove={false}
                  loop={true}
                  onAnimationFinish={[Function]}
                  progress={0}
                  resizeMode="contain"
                  sourceJson="{"v":"5.1.15","fr":60,"ip":0,"op":141,"w":120,"h":120,"nm":"Composição 1","ddd":0,"assets":[],"layers":[{"ddd":0,"ind":0,"ty":4,"nm":"main","sr":1,"ks":{"o":{"a":0,"k":100,"ix":11},"r":{"a":1,"k":[{"i":{"x":[0.833],"y":[0.833]},"o":{"x":[0.167],"y":[0.167]},"n":["0p833_0p833_0p167_0p167"],"t":0,"s":[0],"e":[1080]},{"t":180}],"ix":10},"p":{"a":0,"k":[60,60,0],"ix":2},"a":{"a":0,"k":[-14.604,-15.104,0],"ix":1},"s":{"a":0,"k":[100,100,100],"ix":6}},"ao":0,"shapes":[{"ty":"gr","it":[{"d":1,"ty":"el","s":{"a":0,"k":[106.793,106.793],"ix":2},"p":{"a":0,"k":[0,0],"ix":3},"nm":"Caminho da elipse 1","mn":"ADBE Vector Shape - Ellipse","hd":false},{"ty":"st","c":{"a":0,"k":[1,1,1,1],"ix":3},"o":{"a":0,"k":100,"ix":4},"w":{"a":0,"k":11,"ix":5},"lc":2,"lj":1,"ml":4,"nm":"Traçado 1","mn":"ADBE Vector Graphic - Stroke","hd":false},{"ty":"tr","p":{"a":0,"k":[-14.604,-15.104],"ix":2},"a":{"a":0,"k":[0,0],"ix":1},"s":{"a":0,"k":[100,100],"ix":3},"r":{"a":0,"k":0,"ix":6},"o":{"a":0,"k":100,"ix":7},"sk":{"a":0,"k":0,"ix":4},"sa":{"a":0,"k":0,"ix":5},"nm":"Transformar"}],"nm":"Elipse 1","np":3,"cix":2,"ix":1,"mn":"ADBE Vector Group","hd":false},{"ty":"tm","s":{"a":1,"k":[{"i":{"x":[0.833],"y":[0.833]},"o":{"x":[0.167],"y":[0.167]},"n":["0p833_0p833_0p167_0p167"],"t":0,"s":[0],"e":[0]},{"i":{"x":[0.833],"y":[0.833]},"o":{"x":[0.167],"y":[0.167]},"n":["0p833_0p833_0p167_0p167"],"t":60,"s":[0],"e":[67]},{"t":119}],"ix":1},"e":{"a":1,"k":[{"i":{"x":[0.833],"y":[0.833]},"o":{"x":[0.167],"y":[0.167]},"n":["0p833_0p833_0p167_0p167"],"t":0,"s":[3],"e":[70]},{"i":{"x":[0.833],"y":[0.833]},"o":{"x":[0.167],"y":[0.167]},"n":["0p833_0p833_0p167_0p167"],"t":60,"s":[70],"e":[70]},{"t":119}],"ix":2},"o":{"a":0,"k":0,"ix":3},"m":1,"ix":2,"nm":"Aparar caminhos 1","mn":"ADBE Vector Filter - Trim","hd":false}],"ip":0,"op":900,"st":0,"bm":0}],"chars":[],"markers":[]}"
                  speed={1}
                  style={
                    [
                      {
                        "height": 80,
                        "width": 80,
                      },
                      {
                        "height": 16,
                        "width": 16,
                      },
                    ]
                  }
                  textFiltersAndroid={[]}
                  textFiltersIOS={[]}
                  useNativeLooping={false}
                />
                <View
                  style={
                    {
                      "height": 17,
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#2B1911",
                          "fontFamily": "Baloo2-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 24,
                        },
                        [
                          [
                            {
                              "color": "#7D675E",
                              "fontFamily": "Baloo2-Regular",
                              "fontSize": 14,
                              "letterSpacing": 0.14,
                              "lineHeight": 20,
                            },
                            undefined,
                          ],
                          {
                            "marginBottom": -40,
                            "marginTop": -40,
                          },
                        ],
                        false,
                      ]
                    }
                    suppressHighlighting={true}
                  >
                    swap out
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "flex-end",
                    "height": 40,
                    "paddingBottom": 1,
                    "paddingTop": 4,
                    "width": 141,
                  },
                  {
                    "gap": 6,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    undefined,
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    },
                    {
                      "height": 10,
                      "width": 130,
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "flexShrink": 0,
                      },
                      {
                        "paddingBottom": 2,
                        "paddingLeft": 2,
                        "paddingRight": 2,
                        "paddingTop": 2,
                      },
                    ]
                  }
                >
                  <test-file-stub
                    fill="#888"
                    style={
                      [
                        {
                          "height": 12,
                          "width": 12,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexBasis": "0%",
                        "flexDirection": "row",
                        "flexGrow": 1,
                        "flexShrink": 1,
                      },
                      {
                        "gap": 2,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexBasis": "0%",
                        "flexDirection": "row",
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "justifyContent": "flex-end",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            {
                              "opacity": 0.1,
                              "textAlign": "right",
                            },
                            [
                              {
                                "fontFamily": "Baloo2-SemiBold",
                                "fontSize": 14,
                                "letterSpacing": 0.14,
                                "lineHeight": 22,
                                "marginBottom": -10,
                                "marginTop": -10,
                              },
                              false,
                            ],
                          ],
                          false,
                        ]
                      }
                    >
                      0.00 0
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            {
                              "textAlign": "right",
                            },
                            [
                              {
                                "fontFamily": "Baloo2-SemiBold",
                                "fontSize": 14,
                                "letterSpacing": 0.14,
                                "lineHeight": 22,
                                "marginBottom": -10,
                                "marginTop": -10,
                              },
                              false,
                            ],
                          ],
                          false,
                        ]
                      }
                    >
                      30 143
                    </Text>
                  </View>
                  <Text
                    allowFontScaling={false}
                    style={
                      [
                        {
                          "color": "#2B1911",
                          "fontFamily": "Baloo2-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 24,
                        },
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 14,
                            "letterSpacing": 0.14,
                            "lineHeight": 22,
                            "marginBottom": -10,
                            "marginTop": -10,
                          },
                          false,
                        ],
                        false,
                      ]
                    }
                  >
                    sats
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Swaps should show completed swaps for 5 seconds 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -127,11 +127,11 @@
                        ],
                        false,
                      ]
                    }
                  >
-                   swap complete
+                   pending swap
                  </Text>
                </View>
                <View
                  style={
                    Object {
@@ -139,21 +139,43 @@
                      "flexDirection": "row",
                      "gap": 6,
                    }
                  }
                >
-                 <test-file-stub
-                   fill="#65A519"
+                 <LottieAnimationView
+                   autoPlay={true}
+                   cacheComposition={true}
+                   colorFilters={
+                     Array [
+                       Object {
+                         "color": 4294272290,
+                         "keypath": "main",
+                       },
+                     ]
+                   }
+                   enableMergePathsAndroidForKitKatAndAbove={false}
+                   loop={true}
+                   onAnimationFinish={[Function bound ]}
+                   progress={0}
+                   resizeMode="contain"
+                   sourceJson="{\\"v\\":\\"5.1.15\\",\\"fr\\":60,\\"ip\\":0,\\"op\\":141,\\"w\\":120,\\"h\\":120,\\"nm\\":\\"Composição 1\\",\\"ddd\\":0,\\"assets\\":[],\\"layers\\":[{\\"ddd\\":0,\\"ind\\":0,\\"ty\\":4,\\"nm\\":\\"main\\",\\"sr\\":1,\\"ks\\":{\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":11},\\"r\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"n\\":[\\"0p833_0p833_0p167_0p167\\"],\\"t\\":0,\\"s\\":[0],\\"e\\":[1080]},{\\"t\\":180}],\\"ix\\":10},\\"p\\":{\\"a\\":0,\\"k\\":[60,60,0],\\"ix\\":2},\\"a\\":{\\"a\\":0,\\"k\\":[-14.604,-15.104,0],\\"ix\\":1},\\"s\\":{\\"a\\":0,\\"k\\":[100,100,100],\\"ix\\":6}},\\"ao\\":0,\\"shapes\\":[{\\"ty\\":\\"gr\\",\\"it\\":[{\\"d\\":1,\\"ty\\":\\"el\\",\\"s\\":{\\"a\\":0,\\"k\\":[106.793,106.793],\\"ix\\":2},\\"p\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":3},\\"nm\\":\\"Caminho da elipse 1\\",\\"mn\\":\\"ADBE Vector Shape - Ellipse\\",\\"hd\\":false},{\\"ty\\":\\"st\\",\\"c\\":{\\"a\\":0,\\"k\\":[1,1,1,1],\\"ix\\":3},\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":4},\\"w\\":{\\"a\\":0,\\"k\\":11,\\"ix\\":5},\\"lc\\":2,\\"lj\\":1,\\"ml\\":4,\\"nm\\":\\"Traçado 1\\",\\"mn\\":\\"ADBE Vector Graphic - Stroke\\",\\"hd\\":false},{\\"ty\\":\\"tr\\",\\"p\\":{\\"a\\":0,\\"k\\":[-14.604,-15.104],\\"ix\\":2},\\"a\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":1},\\"s\\":{\\"a\\":0,\\"k\\":[100,100],\\"ix\\":3},\\"r\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":6},\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":7},\\"sk\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":4},\\"sa\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":5},\\"nm\\":\\"Transformar\\"}],\\"nm\\":\\"Elipse 1\\",\\"np\\":3,\\"cix\\":2,\\"ix\\":1,\\"mn\\":\\"ADBE Vector Group\\",\\"hd\\":false},{\\"ty\\":\\"tm\\",\\"s\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"n\\":[\\"0p833_0p833_0p167_0p167\\"],\\"t\\":0,\\"s\\":[0],\\"e\\":[0]},{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"n\\":[\\"0p833_0p833_0p167_0p167\\"],\\"t\\":60,\\"s\\":[0],\\"e\\":[67]},{\\"t\\":119}],\\"ix\\":1},\\"e\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"n\\":[\\"0p833_0p833_0p167_0p167\\"],\\"t\\":0,\\"s\\":[3],\\"e\\":[70]},{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"n\\":[\\"0p833_0p833_0p167_0p167\\"],\\"t\\":60,\\"s\\":[70],\\"e\\":[70]},{\\"t\\":119}],\\"ix\\":2},\\"o\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":3},\\"m\\":1,\\"ix\\":2,\\"nm\\":\\"Aparar caminhos 1\\",\\"mn\\":\\"ADBE Vector Filter - Trim\\",\\"hd\\":false}],\\"ip\\":0,\\"op\\":900,\\"st\\":0,\\"bm\\":0}],\\"chars\\":[],\\"markers\\":[]}"
+                   speed={1}
                    style={
                      Array [
+                       Object {
+                         "height": 80,
+                         "width": 80,
+                       },
                        Object {
                          "height": 16,
                          "width": 16,
                        },
-                       undefined,
                      ]
                    }
+                   textFiltersAndroid={Array []}
+                   textFiltersIOS={Array []}
+                   useNativeLooping={false}
                  />
                  <View
                    style={
                      Object {
                        "height": 17,"
`;

exports[`Swaps should show completed swaps for 5 seconds 2`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;
